# export_base_image_example

./: BUILD.bazel  README.md  WORKSPACE  external_docker_images.bzl  layers_metadata_aspect.bzl  layers_metadata_export.bzl
